немного о парсере и обработчике ошибок

--- a/main.tex
+++ b/main.tex
@@ -300,6 +300,7 @@ S – начальный символ грамматики.
 
 Естественные языки и искусственные, вне зависимости от их происхождения, представляют собой совокупность строк, состоящих из символа некоторого алфавита. Предложения или утверждения – это строки, состоящие из символов языка. Какие именно утверждения существуют в языке определяют синтаксические правила. 
 
+%---------------------------------------ЛЕКСИЧЕСКИЙ АНАЛИЗ
 \subsection {Лексичекий анализ}
 Первым шагом в разработке языков зачастую язвляется лексический анализ – процесс аналитического разбора входной последовательности символов на лексемы, с целью получения на выходе идентифицированных последовательностей, называемых токенами. Токен – это малая единица языка. Токен может быть именем переменной или функции, оператором или числом. 
 
@@ -338,6 +339,9 @@ S – начальный символ грамматики.
 
 Нисходящий анализ (метод рекурсивног оспуска) является наиболее эффективным методом синтаксического анализа. В его основе лежит левосторонний разбор строки языка. Исходной сентенциальной формой является начальный символ грамматики, а целевой – заданная строка языка. На каждом шаге разбора правило грамматики применяется к самому левому нетерминалу сентенции. Данный процесс соответствует построению дерева разбора цепочки сверху вниз (от корня к листьям).
 
+%ДЕРЕВЬЯ СИНТАКСИЧЕСКОГО АНАЛИЗА
+
+
 \subsection {Семантический анализ}
 В ходе семантического анализа проверяются отдельные правила записи исходных программ, которые не описываются КС-грамматикой. Эти правила носят контекстно-зависимый характер, их называют семантическими соглашениями или контекстными условиями.
 
@@ -346,36 +350,31 @@ S – начальный символ грамматики.
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Реализационная часть}
 \label{cImplementation}
-Рекомендуемый объем главы --- 10-30 стр.
-Название главы должно отражать ее содержание, например ``Архитектура вечного двигателя''.
-В главе должно быть описание этапов разработки технического решения задачи. Следующий пример
-приведен для работ, связанных  с проектированием и реализацией 
-программного продукта.
+%Рекомендуемый объем главы --- 10-30 стр.
+%Название главы должно отражать ее содержание, например ``Архитектура вечного двигателя''.
+%В главе должно быть описание этапов разработки технического решения задачи. Следующий пример
+%приведен для работ, связанных  с проектированием и реализацией 
+%программного продукта.
 
 
 Задача построения языка довольна трудозатратная. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
 
-Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов для формальных языков. Он преобразует контекстно-свободную грамматику в форму РБНФ в программу на Java, C++, JavaSript, Go. Python и Go. 
+Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов (парсеров) для формальных языков. Он преобразует контекстно-свободную грамматику в форму РБНФ в программу на Java, C++, JavaSript, Go. Python и Go. 
 
 ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восставновление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. 
 
 %-------------------------------------ЛЕКСЕР
-\section{    Лексер}
+\section{ Лексер}
 DSL для описания тестовых сценариев автомобильных систем должен иметь следующие характерные инструкции (предложения):
-
-•	Отправить фрейм, сигнал или набор данных по UDS протоколу на тестируемое ПО
-
-•	Получить фрейм, сигнал или набор данных по UDS протоколу от тестируемого ПО
-
-•	Сделать паузу между инструкиями, чтобы тестируемое ПО успело сформировать и отправить необходимый пакет
-
-•	Выполнять шаги определенное количество раз, т.к. многие системы имеют алгоритмы со счетчики, которые можно выполнить определенное количесво раз. Зачастую значения таких счетчиков измеряются сотнями и даже тысячами шагов. При удачной группировке этих шагов количество строк тестового сценария можно сократить в десятки раз, поместив из в цикл.
-
-•	Выполнять определенные действия по событию (триггер).
-
-•	Установить значение отправляемого сигнала
-
-•	Проверить полученное значение сигнала
+\begin{itemize}
+\itemОтправить фрейм, сигнал или набор данных по UDS протоколу на тестируемое ПО
+\itemПолучить фрейм, сигнал или набор данных по UDS протоколу от тестируемого ПО
+\itemСделать паузу между инструкиями, чтобы тестируемое ПО успело сформировать и отправить необходимый пакет
+\itemВыполнять шаги определенное количество раз, т.к. многие системы имеют алгоритмы со счетчики, которые можно выполнить определенное количесво раз. Зачастую значения таких счетчиков измеряются сотнями и даже тысячами шагов. При удачной группировке этих шагов количество строк тестового сценария можно сократить в десятки раз, поместив из в цикл.
+\itemВыполнять определенные действия по событию (триггер).
+\itemУстановить значение отправляемого сигнала
+\itemПроверить полученное значение сигнала
+\end{itemize}
 
 При этом набор иструкций команды, состоящие из аналитиков, тестировщиков и разработчиков должны определять сами, так как процессе разработки автомобильного ПО могут выявляться свойства, специфичные для того или иного программного продукта. У пользователей должна быть позможность описать сценарии с иcпользованием специфичных терминов (рычаги у рулевой колонки, расстояние у лидара и т.д).
  Предполагается, что пользователи сами определяют ограниченный набор шагов, необходимых для описания тестовых сценариев, а тестировщиик набор шагов для каждой инструкции. 
@@ -392,33 +391,47 @@ DSL для описания тестовых сценариев автомобильных систем должен иметь следующие 
 
 fragment S: [sS];
 
+
+\lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 ]{res/BddLexer.g4}
+
+
 %---------------------------------ПАРСЕР
-\section{    Парсер}
+\section{Парсер}
 
 Для описания синтаксической структуры языка нужно определить порядок записи:
-
-•	Предложений в тексте;
-
-•	Фраз в предложении;
-
-•	Лексем и фраз в более общих фразах.
+\begin{itemize}
+\itemПредложений в тексте;
+\itemФраз в предложении;
+\itemЛексем и фраз в более общих фразах.
+\end{itemize}
 
 Для разрабатываемого языка необходимы такие синтаксические правила как текст инструкции и кастомизированный параметр. При этом текст может содержать пробелы, любые символы английского и русского языков, а так же любые другие символы, кроме символов, обозначающих начало и конец кастомизированного параметра, а так же служебный символ «@», обозначающий начало ключевого слова. 
 
-
 Синтаксические правила одного шага можно описать следующим образом:
 
-•	Шаг должен начинаться с ключевого символа, определяемого служебным символом “@”
-
-•	Шаг не может начинаться с пользовательского параметра
-
-•	Шаг может начинаться с любого символа
-
-•	Шаг может иметь сколь угодно много параметров
-
+\begin{itemize}
+\itemШаг должен начинаться с ключевого символа, определяемого служебным символом “@”
+\itemШаг не может начинаться с пользовательского параметра
+\itemШаг может начинаться с любого символа
+\itemШаг может иметь сколь угодно много параметров
+\end{itemize}
 
 TODO: описать синтаксические правила шагов и сценария в целом
 
+
+По описанным  правилам ANTLR генерирует файлы для распознания. 
+BddParser.java - это описание класса парсера, то есть синтаксического анализатора, отвечающего грамматике BddParser. 
+BddLexer.java -это описание класса лексера, или лексического анализатора, отвечающего грамматике 
+
+BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат информацию о токенах
+
+
+BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это интерфейсы и классы , содержащие описания методов, которые позволяют выполнять определенный действия при обходе синтаксического дерева
+
+
+
+
+  
 %-------------------------------Использование грамматики
 \section{    Использование грамматики}
 
@@ -471,6 +484,14 @@ TODO: описать синтаксические правила шагов и сценария в целом
 отсутствующая альтернатива (No viable alternative input); данная ошибка описывает все остальные возможные ошибки парсинга.
 
 %class T { int ; }
+
+Для обработки ошибок используется класс ThrowingErrorListener, наследуемый от BaseErrorListener. BaseErrorListener предоставляет пустую имплементацию интерфейса  ANTLRErrorListener. Реализация каждого метода по умолчанию ничего не делает, но может быть переписана в наследнике по мере необходимости. Для обработки синтаксических ошибок используется метод 	syntaxError, уведомляющий в какой строке и в на какой позиции в строке возникла ошибка и ее причину. 
+
+Ниже представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг 4.4)
+\lstinputlisting[caption=Пример тестового сценария с синтаксической ошибкой, language=java,  firstline=1,  lastline=10 ]{res/ErrorExample.txt}
+
+
+\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с синтаксической ошибкой, language=java,  firstline=13,  lastline=24 ]{res/ErrorExample.txt}
 
 
 
