exception description fix

--- a/main.tex
+++ b/main.tex
@@ -493,7 +493,7 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   Ч это инт
 
 \lstinputlisting[caption=–езультат работы интерпретатора дл€ тестового сценари€ с синтаксической ошибкой, language=java,  firstline=13,  lastline=24 ]{res/ErrorExample.txt}
 
-
+TODO: add more info about defferent exceptions
 
 \chapter{Ёкспериментальна€ часть }
 \label{cExperiments}
