семмкнтический анализ описание

--- a/main.tex
+++ b/main.tex
@@ -367,7 +367,13 @@ S – начальный символ грамматики.
 \subsection {Семантический анализ}
 В ходе семантического анализа проверяются отдельные правила записи исходных программ, которые не описываются КС-грамматикой. Эти правила носят контекстно-зависимый характер, их называют семантическими соглашениями или контекстными условиями.
 
+Пользовательские инструкции, используемые в тестовых сценариях должны быть заранее обьявлены пользователями в специальной бибилиотеке. Ключевое слово должно отражать смысл инструкции: Send- для отправки пакета, Recieve - для получания пакета и т.д. 
 
+В теле метода  сооветствующей инструкции должны быть реализованы шаги отправки, получения пакетов и т.д. в зависимости от аннотации. Для того, чтобы определить метод, который должен быть выполнен при вызове заданной текстовой инструкции, а так же приведения типов пользовательских параметров можно использовать рефлексию.
+
+Рефлексия (от лат. reflexio — обращение назад) — это механизм исследования данных о программе во время её выполнения. Рефлексия позволяет исследовать информацию о полях, методах и конструкторах классов. 
+
+Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API.  
 
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Реализационная часть}
@@ -381,9 +387,9 @@ S – начальный символ грамматики.
 
 Задача построения языка довольна трудозатратная. Однако существуют программные инструменты, помогающие сделать его меньше и проще. Для этого был разработан следующий инструментарий для создания компиляторов: генераторы лексических анализаторов (сканеров), генераторы синтаксических анализаторов (парсеров), автоматические генераторы кода.
 
-Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов (парсеров) для формальных языков. Он преобразует контекстно-свободную грамматику в форму РБНФ в программу на Java, C++, JavaSript, Go. Python и Go. 
+Для реализации языка было выбрано «еще одно средство распознавания языков» ANTLR4 (ANother Tool for Language Recognition). Это генератор нисходящих анализаторов (парсеров) для формальных языков. Он преобразует контекстно-свободную грамматику в форме РБНФ в программу на Java, C++, JavaSript, Go. Python и Go. 
 
-ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восставновление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. 
+ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восставновление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
 
 %-------------------------------------ЛЕКСЕР
 \section{ Лексер}
@@ -455,7 +461,7 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
   
 %-------------------------------Использование грамматики
-\section{    Использование грамматики}
+\section{Использование грамматики}
 
 Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. При анализе узлов дерева разбора нужно обращаться к дочерним узлам, соответствующим фрагментам исходного правила. Причем обращаться можно как к отдельным узлам, так и к группам узлов. Следовательно важным условием создания хорошей грамматики является возможность интуитивно простой доступ к любой части правила. ANTLR4 предоставляет такие сущности как альтернативные и элементарные метки. Альтернативные метки позволяют разбить сложное правило на альтернативные фразы и обрабатывать каждую фразу отдельно.  
 В нашем случае правило инструкции можно разбить на следующие альтервативные метки:  
@@ -463,6 +469,13 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
 
 Элементными метками помечаются отдельные нетерминалы или последовательности терминалов. Они предоставляют доступ к содержимому контекста правила в виде поля с заданным именем. Таким образом, вместо вычисления (извлечения) отдельного элемента содержимого некоторого контекста достаточно просто обратиться к такой элементной метке.
+
+В реализации интерпретатора используется паттерн Listener. При обходе абстрактного синтаксического дерева интерпретатор находит очередную нотированную инструкцию, с помощью рефлексии находит метод, аннотированный соотвествующим ключевым словом и добавляет ее в список необходимых для выполнения. При этом инструкция должна быть заранее определена пользователем в библиотеке инструкций. Во время семантического анализа все параметры пользовательских параметров приводятся к типам, объявленным в параметрах метода. Методы инcтрукций могут принимать параметры следующх типов: boolean, byte, short, integer, long, float, double, String, Enum. 
+
+При завершении обхода AST инструкции поочередно выполняются в том порядке, в котором были заданы в тестовой спецификации. 
+
+\lstinputlisting[caption=Пример реализации пользовательской инструкции с аннотацией Send,language=java]{res/annotatoinExample.txt}
+
 
 %----------------------Архитектура системы
 \section{Архитектура системы}
@@ -479,37 +492,37 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
 
 %--------------------------------------Обработчик ошибок
-\section{    Обработчик ошибок}
+\section{Обработчик ошибок}
 Важной способностью каждого парсера является обработка ошибок.
 В случае, если исходный текст не соотвествует синтаксическим правилам языка, небоходимо корректно реагировать на некорректную цепочу лексем. В этом случае можно завершить синтаксический анализ и вывести сообщение об ошибке, либо попробовать за одну попутку синтаксического анализа найти как можно больше ошибок. 
 
 %TODO: описать мой обработчик 
 
 В ANTLR существуют следующие типы ошибок парсинга:
-
-ошибка распознавания токена (Lexer no viable alt); единственная существующая лексическая ошибка, обозначающая отсутствие правила для формирования токена из существующей лексемы:
+\begin{itemize}
+\itemошибка распознавания токена (Lexer no viable alt); единственная существующая лексическая ошибка, обозначающая отсутствие правила для формирования токена из существующей лексемы.
 
 %class # { int i; } — здесь такой лексемой является #.
 
-отсутствующий токен (Missing token); в этом случае ANTLR вставляет в поток токенов отсутствующий токен, помечает, что его не хватает, и продолжает парсинг, как будто он существует.
+\itemотсутствующий токен (Missing token); в этом случае ANTLR вставляет в поток токенов отсутствующий токен, помечает, что его не хватает, и продолжает парсинг.
 
 %class T { int f(x) { a = 3 4 5; } } — здесь такой токен это } в конце;
 
-лишний токен (Extraneous token); ANTLR помечает, что токен ошибочный и продолжает парсинг дальше, как будто он отсутствует: в примере такой токен первая ;
-
+\itemлишний токен (Extraneous token). Генератор помечает, что токен ошибочный и продолжает парсинг дальше.
 %class T ; { int i; }
 
-несовместимая входная цепочка (Mismatched input); при этом включается «режим паники», цепочка входных токенов игнорируется, а парсер ожидает токена из синхронизирущего множества. В следующем примере игнорируются лексемы 4 и 5, а синхронизирующим токеном является ;
+\itemнесовместимая входная цепочка (Mismatched input). При этом включается «режим паники», цепочка входных токенов игнорируется, а парсер ожидает токена из синхронизирущего множества. 
 
 %class T { int f(x) { a = 3 4 5; } }
 
-отсутствующая альтернатива (No viable alternative input); данная ошибка описывает все остальные возможные ошибки парсинга.
+\itemотсутствующая альтернатива (No viable alternative input). Данная ошибка описывает все остальные возможные ошибки парсинга.
 
 %class T { int ; }
 
+\end{itemize}
 Для обработки ошибок используется класс ThrowingErrorListener, наследуемый от BaseErrorListener. BaseErrorListener предоставляет пустую имплементацию интерфейса  ANTLRErrorListener. Реализация каждого метода по умолчанию ничего не делает, но может быть переписана в наследнике по мере необходимости. Для обработки синтаксических ошибок используется метод 	syntaxError, уведомляющий в какой строке и в на какой позиции в строке возникла ошибка и ее причину. 
 
-Ниже представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг 4.4)
+Ниже представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг 3.4)
 \lstinputlisting[caption=Пример тестового сценария с синтаксической ошибкой, language=java,  firstline=1,  lastline=10 ]{res/ErrorExample.txt}
 
 
