XL driver library description

--- a/main.tex
+++ b/main.tex
@@ -476,10 +476,29 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
 \lstinputlisting[caption=Пример реализации пользовательской инструкции с аннотацией Send,language=java]{res/annotatoinExample.txt}
 
+Для реализации функционала симуляции автомобильных сетей используется XL-Driver-Library. XL-Driver-Library -- это универсальный программный интерфейс, позволяющий получить доступ к интерфейсам апаратных средств Vector. Он поддерживает следующие шины: 
+\begin{itemize}
+\item CAN / CAN FD
+\item LIN
+\item FlexRay
+\item Automotive Ethernet
+\item MOST
+\item ARINC
+\end{itemize}
+
+XL-Driver-Library предоставляет общие и шинно-специфичные методы, которые облегчают управлять интерфейсами шины от Vector. Каналы  и порты управляются общими методами. Шинно-специфичные методы используются, чтобы настроить сетевые узлы и послать или получить сообщения.  XL-Driver-Library позволяет эффективно использовать интерфейсы шины в пользовательских приложениях. Особенно полезно это при реализации специализированных иструментов, которые адаптированы к автоматизированному рабочему месту и его окружению, с целью увеличения производительности. 
+По словам производителей данная библиотека может быть использована при создании инструментов тестирования для тестового оборудования автомобильных систем. 
+
+Для разработки XL Driver Library приложений требуется подключить динамческие бибилотеки, которые находятся в открытом доступе на сайте компании Vector. необходимые методы реализованы на языке С, поэтому для доступа к методам через java был реализован класс JNIVxlApi.java c использованием  механизма JNI. 
+
+Java Native Interface (JNI) — стандартный механизм для запуска кода, под управлением виртуальной машины Java (JVM), который написан на языках С/С++ или Ассемблера, и скомпонован в виде динамических библиотек, позволяет не использовать статическое связывание. Это даёт возможность вызова функции С/С++ из программы на Java, и наоборот.
 
 %----------------------Архитектура системы
 \section{Архитектура системы}
 Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных  и др.
+
+
+
 
 %------------------------Интерфейс системы
 \section{Интерфейс системы}
@@ -538,7 +557,7 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
 
 
-TODO: add more info about defferent exceptions
+%TODO: add more info about defferent exceptions
 
 \chapter{Экспериментальная часть }
 \label{cExperiments}
