--- a/main.tex
+++ b/main.tex
@@ -17,11 +17,17 @@
 
 
 
-\Abstract{
+\Abstract{Выпускная квалификационная работа посвящена разработке языка описания сценариев тестирования автомобильных систем. Проводится сравнительный анализ схожих по тематике инструментов.\\
+Так же описываются принципы разработки языков и технических инструментов, выбранных для разработки.\\
+Результат работы -- язык описания сценариев тестирования автомобильных систем, являющийся потенциально пригодным для внедрения на производстве.\\
 %для бакалаврских, дипломных и магистерских работ
-Краткая характеристика всего документа,  основной результат работы, список 
-ключевых слов
-}{Brief description of the work, main result, keywords}
+
+Клчевые слова: Предметно-ориентированный язык, функциональное тестирование, автомобильные системы.
+
+}{The final qualifying work is devoted to the development of the...
+
+
+}
 
 \begin{document}
  
@@ -47,9 +53,16 @@
 %для бакалаврских, дипломных и магистерских работ
 \Chapter{Список обозначений}
 \begin{tabular}{ll}
-АБГШ& Аддитивный белый гауссовский шум\\
 UML& унифицированный язык моделирования\\
-EPS& Encapsulated Postscript
+ECU&Electronic Control Unit\\
+BDD& behaviour-driven development\\
+ПО & программное обеспечение\\
+TTD&test-driven development\\
+DSL& Domain-specific language\\
+AUTOSAR&Automotive Open System Architecture\\
+БНФ&Форма Бэкуса-Наура\\
+РБНФ&Расширенная форма Бэкуса-Наура\\
+AST& Abstract syntax tree
 \end{tabular}
 
 %------------------------ВВЕДЕНИЕ-----------------------------
@@ -78,19 +91,14 @@ EPS& Encapsulated Postscript
 Для достижения взаимопонимания между всеми участниками процесса была создана практика «разработка, основанная на функционировании» (behaviour-driven development – BDD). 
 В сфере автомобильных систем BDD подход мог бы сильно облегчить процесс разработки. 
 
-TODO: обзор глав
-
-
+%TODO: обзор глав
 
 Работа организована следующим образом. В главе \ref{cReview} представлен 
-обзор проблемы создания вечного двигателя. Глава \ref{cDesign} содержит 
+обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор аналогов. Глава \ref{cDesign} содержит 
 описание предлагаемого подхода к его построению. Вопросы его практической 
 реализации рассмотрены в главе \ref{cImplementation}. Результаты 
 экспериментального исследования его эффекивности приведены в главе 
-\ref{cExperiments}. В приложении \ref{cHints} приведены правила оформления 
-различных элементов работы и рекомендации по использованию инструментария 
-\LaTeX.
-
+\ref{cExperiments}. 
 
 %------------Постановка задачи и обзор литературы -------------------
 \chapter{Обзор литературы и постановка задачи }
@@ -494,20 +502,28 @@ XL-Driver-Library предоставляет общие и шинно-специфичные методы, которые облегч
 Java Native Interface (JNI) — стандартный механизм для запуска кода, под управлением виртуальной машины Java (JVM), который написан на языках С/С++ или Ассемблера, и скомпонован в виде динамических библиотек, позволяет не использовать статическое связывание. Это даёт возможность вызова функции С/С++ из программы на Java, и наоборот.
 
 %----------------------Архитектура системы
-\section{Архитектура системы}
-Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных  и др.
+%\section{Архитектура системы}
+%Псевдокоды или блок-схемы основных алгоритмов, основные структуры данных  и др.
+
+Ниже представлена диаграмма классов интерпретатора.
 
 
+
+\begin{figure}[h]
+\center{\includegraphics[width=\linewidth]{res/ClassDiagram}}
+\caption{Диаграмма классов}
+\label{fig:image}
+\end{figure}
 
 
 %------------------------Интерфейс системы
-\section{Интерфейс системы}
-\label{sSpec}
-Интерфейс пользователя, модульная структура, API
-\section{Особенности реализации}
-Использованные инструментальные средства, приемы программирования, 
-технические решения, связанные с ограничениями аппаратных или программных 
-средств.  
+%\section{Интерфейс системы}
+%\label{sSpec}
+%Интерфейс пользователя, модульная структура, API
+%\section{Особенности реализации}
+%Использованные инструментальные средства, приемы программирования, 
+%технические решения, связанные с ограничениями аппаратных или программных 
+%средств.  
 
 
 %--------------------------------------Обработчик ошибок
@@ -597,9 +613,9 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 }
 \end{table}
 
+В результате тестирования выявлено, что интерпретатор работает корректно.
 
-
-\section{Примеры применения метода или программы}
+%\section{Примеры применения метода или программы}
 
 \Chapter{Заключение }
 Рекомендуемый объем --- 2--4 стр.
