--- a/main.tex
+++ b/main.tex
@@ -383,6 +383,11 @@ S – начальный символ грамматики.
 
 Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API.  
 
+\subsection {Симуляция работы сетей}
+
+рассказать о шине CAN в промышленной автоматизации, eternet, fleaxray? немного о их пакетах и что нужно для тестирования? 
+
+
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Реализационная часть}
 \label{cImplementation}
@@ -618,11 +623,11 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %\section{Примеры применения метода или программы}
 
 \Chapter{Заключение }
-Рекомендуемый объем --- 2--4 стр.
-Содержит изложение итогов квалификационной работы в сопоставлении с общей 
-целью и поставленными задачами. Формулировка суждения автора о научной 
-новизне и практической ценности ВКР. Предложения по внедрению результатов, 
-перспективы продолжения работы 
+%Рекомендуемый объем --- 2--4 стр.
+%Содержит изложение итогов квалификационной работы в сопоставлении с общей 
+%целью и поставленными задачами. Формулировка суждения автора о научной 
+%новизне и практической ценности ВКР. Предложения по внедрению результатов, 
+%перспективы продолжения работы 
 
 
 
