--- a/main.tex
+++ b/main.tex
@@ -470,7 +470,7 @@ BddParser.tokens, BddLexer.tokens — это вспомогательные классы, которые содержат
 BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это интерфейсы и классы , содержащие описания методов, которые позволяют выполнять определенный действия при обходе синтаксического дерева
 
 
-
+Вопрос: вставлять ли картинки с построенными ANTLR ast? 
 
   
 %-------------------------------Использование грамматики
