abstract in english

--- a/main.tex
+++ b/main.tex
@@ -22,11 +22,15 @@
 Результат работы -- язык описания сценариев тестирования автомобильных систем, являющийся потенциально пригодным для внедрения на производстве.\\
 %для бакалаврских, дипломных и магистерских работ
 
-Клчевые слова: Предметно-ориентированный язык, функциональное тестирование, автомобильные системы.
+Ключевые слова: Предметно-ориентированный язык, функциональное тестирование, автомобильные системы.
 
-}{The final qualifying work is devoted to the development of the...
+}{
 
+Final year graduation diploma dedicated to the development of the language designed for describing various automobile system testing scenarios. The comparable analysis of systems that share similar instruments is conducted. \\
+Furthermore, this paper aims to describe the development of the programming languages as well as technical instruments used by them.\\
+The final result of this work is a fully functional language used for describing automobile testing scenarios. Also, this language could potentially be integrated into the corporate environment.\\
 
+Keywords: domain specific language, functional testing, automobile systems.
 }
 
 \begin{document}
